--- a/roles/web/vars/main.yaml
+++ b/roles/web/vars/main.yaml
@@ -1,5 +1,5 @@
-CATALOGUE_HOST: catalogue.joindevops.online
-USER_HOST: user.joindevops.online
-SHIPPING_HOST: shipping.joindevops.online
-CART_HOST: cart.joindevops.online
-PAYMENT_HOST: payment.joindevops.online
+CATALOGUE_HOST: catalogue.sureshdevops.online
+USER_HOST: user.sureshdevops.online
+SHIPPING_HOST: shipping.sureshdevops.online
+CART_HOST: cart.sureshdevops.online
+PAYMENT_HOST: payment.sureshdevops.online
